export interface CreateUserDto {
  name: string;
  surname: string;
  username: string;
}
