export enum UserManagementErrorType {
  USERNAME_ALREADY_IN_USE = 'USERNAME_ALREADY_IN_USE',
}
