export enum UserRole {
  AMMINISTRATORE = 'AMMINISTRATORE',
  OPERATORE_SANITARIO = 'OPERATORE_SANITARIO',
}
