@startuml

interface CreateUserDto {
    +name: string
    +surname: string
    +username: string
}

interface UserCreatedResponseDto {
    +tempPassword: string
}

enum UserManagementErrorType {
    USERNAME_ALREADY_IN_USE
    OTHER_ERROR
}

enum UserRole {
    AMMINISTRATORE
    OPERATORE_SANITARIO
}

interface UserDto {
    +id: number
    +name: string
    +surname: string
    +username: string
    +role: UserRole
}

interface UserInfo {
    +username: string
    +firstName: string
    +lastName: string
    +role: UserRole
}

interface User {
    +id: number
    +firstName: string
    +lastName: string
    +username: string
    +role: UserRole
}

class CreateUserFormComponent {
    +errorType: InputSignal<UserManagementErrorType | null>
    +isOpen: InputSignal<boolean>
    +formSubmit: OutputEmitterRef<CreateUserDto>
    +openRequest: OutputEmitterRef<void>
    +closeRequest: OutputEmitterRef<void>
    -nameInput?: ElementRef<HTMLInputElement>
    -fb: FormBuilder
    +form: FormGroup
    +submit(): void
    +reset(): void
    +resetAndFocus(): void
    +requestClose(): void
    +requestOpen(): void
}

class UserCreatedDialogComponent {
    +response: InputSignal<UserCreatedResponseDto>
    +user: InputSignal<CreateUserDto>
    +closed: OutputEmitterRef<void>
    +closeDialog(): void
}

class UserListComponent {
    +users: InputSignal<UserDto[] | undefined>
    +deleteUser: OutputEmitterRef<number>
    +pendingDeleteUser: WritableSignal<UserDto | null>
    +onDeleteRequest(user: UserDto): void
    +onDeleteCancel(): void
    +onDeleteConfirm(): void
    +onDelete(user: UserDto): void
}

class DecoderPasswordService {
    +decodeTempPassword(tempPassword: string): string
}

class UserApiService {
    -http: HttpClient
    -baseUrl: string
    -decoderPasswordService: DecoderPasswordService
    +getUsers(): Observable<UserDto[]>
    +createUser(dto: CreateUserDto): Observable<UserCreatedResponseDto>
    +deleteUser(id: number): Observable<void>
}

class UserManagementPageStateService {
    -userApi: UserApiService
    -refreshTrigger$: BehaviorSubject<void>
    +users$: Observable<UserDto[]>
    +createdResponse: WritableSignal<UserCreatedResponseDto | null>
    +createdUser: WritableSignal<CreateUserDto | null>
    +formError: WritableSignal<UserManagementErrorType | null>
    +isCreateFormOpen: WritableSignal<boolean>
    +openCreateForm(): void
    +closeCreateForm(): void
    +submitUser(dto: CreateUserDto): Observable<UserCreatedResponseDto>
    +deleteUser(id: number): Observable<void>
    +closeDialog(): void
    -mapFormError(err: unknown): UserManagementErrorType
    -isHttpStatus(err: unknown, status: number): boolean
}

class UserManagementPageComponent {
    -pageState: UserManagementPageStateService
    +users$: Observable<UserDto[]>
    +createdResponse: WritableSignal<UserCreatedResponseDto | null>
    +createdUser: WritableSignal<CreateUserDto | null>
    +formError: WritableSignal<UserManagementErrorType | null>
    +isCreateFormOpen: WritableSignal<boolean>
    -createUserFormComponent?: CreateUserFormComponent
    +openCreateForm(): void
    +closeCreateForm(): void
    +onFormSubmit(dto: CreateUserDto): void
    +onUserDeleted(id: number): void
    +onDialogClosed(): void
}

' Relazioni tra modelli
UserDto --> UserRole
UserInfo --> UserRole
User --> UserRole

' Relazioni componenti
CreateUserFormComponent ..> CreateUserDto
CreateUserFormComponent ..> UserManagementErrorType

UserCreatedDialogComponent ..> UserCreatedResponseDto
UserCreatedDialogComponent ..> CreateUserDto

UserListComponent ..> UserDto

UserManagementPageComponent --> UserManagementPageStateService
UserManagementPageComponent ..> UserDto
UserManagementPageComponent ..> CreateUserDto
UserManagementPageComponent ..> UserCreatedResponseDto
UserManagementPageComponent ..> UserManagementErrorType
UserManagementPageComponent ..> CreateUserFormComponent
UserManagementPageComponent ..> UserListComponent
UserManagementPageComponent ..> UserCreatedDialogComponent

' Relazioni servizi
UserApiService --> DecoderPasswordService
UserApiService ..> UserDto
UserApiService ..> CreateUserDto
UserApiService ..> UserCreatedResponseDto

UserManagementPageStateService --> UserApiService
UserManagementPageStateService ..> UserDto
UserManagementPageStateService ..> CreateUserDto
UserManagementPageStateService ..> UserCreatedResponseDto
UserManagementPageStateService ..> UserManagementErrorType

@enduml